system/base/istio-ingress/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-auth-policy
spec:
  selector:
    matchLabels:
      istio: ingress
  action: CUSTOM
  provider:
    name: "oauth2-proxy"
  rules:
  - to:
    - operation:
        hosts:
          - REPLACE_ME
